# gini-confidence-interval

./: README.md  assess-results.ipynb  pyproject.toml  run.py
